--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div>
                     <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpeg">
-                    <p class="bookname"><a href="sherlock_holmes_vol2.html"><button class="clickable">Sherlock Holmes Vol.2</button></a></p>
+                    <p class="bookname"><a href="#"><button class="non-clickable">Sherlock Holmes Vol.2</button></a></p>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div>
                     <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpeg">
-                    <p class="bookname"><a href="how_to_stop_worrying_and_start_living.html"><button class="clickable">How to Stop worrying & Start living</button></a></p>
+                    <p class="bookname"><a href="#"><button class="non-clickable">How to Stop worrying & Start living</button></a></p>
                 </div>
                 <div>
                     <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpeg">
