--- a/non-fiction.html
+++ b/non-fiction.html
@@ -34,7 +34,7 @@
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpeg">
-                    <p class="bookname"><a href="how_to_stop_worrying_and_start_living.html"><button class="clickable">How to Stop Worrying & Start Living</button></a></p>
+                    <p class="bookname"><a href="#"><button class="non-clickable">How to Stop Worrying & Start Living</button></a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781847946249_1.jpg" alt="nonfiction_5.jpeg">
@@ -52,7 +52,7 @@
                     <p class="bookname"><a href="journeys_of_a_lifetime.html"><button class="clickable">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426220968.jpg" alt="nonfiction_6.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426220968.jpg" alt="nonfiction_6.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">National Geographic Complete National Parks Of Europe</button></a></p>
                 </div>
                 <div>
