--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -27,19 +28,19 @@
             </div>
             <div class="category_books">
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_24647.jpg" alt="ficiton_1.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_24647.jpg" alt="ficiton_1.jpg">
                     <p class="bookname"><a href="to_kill_a_mockingbird.html"><button class="clickable">To kill a mockingbird</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780142424179.jpg" alt="fiction_2.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780142424179.jpg" alt="fiction_2.jpg">
                     <p class="bookname"><a href="the_fault_in_our_stars.html"><button class="clickable">The fault in our stars</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23717.jpg" alt="fiction_3.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23717.jpg" alt="fiction_3.jpg">
                     <p class="bookname"><a href="sherlock_holmes_vol1.html"><button class="clickable">Sherlock Holmes Vol.1</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Sherlock Holmes Vol.2</button></a></p>
                 </div>
             </div>
@@ -50,19 +51,19 @@
             </div>
             <div class="category_books">
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23891.jpg" alt="nonfiction_1.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23891.jpg" alt="nonfiction_1.jpg">
                     <p class="bookname"><a href="how_to_win_friends_and_influence_people.html"><button class="clickable">How to Win friends & Influence people</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780008430382.jpg" alt="nonfiction_2.jpeg">
-                    <p class="bookname"><a href="feel_good_food.html"><button class="clickable">Feel good food</button></a></p>
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780008430382.jpg" alt="nonfiction_2.jpg">
+                    <p class="bookname"><a href="feel_good_food.html"><button class="clickable">Feel Good Food: Over 100 Healthy Family Recipes</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">How to Stop worrying & Start living</button></a></p>
                 </div>
                 <div>
-                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpeg">
+                    <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpg">
                     <p class="bookname"><a href="journeys_of_a_lifetime.html"><button class="clickable">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</button></a></p>
                 </div>
             </div>
