--- a/non-fiction.html
+++ b/non-fiction.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -27,15 +28,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23891.jpg" alt="nonfiction_1.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23891.jpg" alt="nonfiction_1.jpg">
                     <p class="bookname"><a href="how_to_win_friends_and_influence_people.html"><button class="clickable">How to Win Friends & Influence People</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">How to Stop Worrying & Start Living</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781847946249_1.jpg" alt="nonfiction_5.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781847946249_1.jpg" alt="nonfiction_5.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">The Power Of Habit</button></a></p>
                 </div>
             </div>
@@ -46,7 +47,7 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpg">
                     <p class="bookname"><a href="journeys_of_a_lifetime.html"><button class="clickable">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</button></a></p>
                 </div>
                 <div>
@@ -54,7 +55,7 @@
                     <p class="bookname"><a href="#"><button class="non-clickable">National Geographic Complete National Parks Of Europe</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426221392.jpg" alt="nonfiction_7.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426221392.jpg" alt="nonfiction_7.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Drives Of A Lifetime 2nd Edition: 500 Of The World's Greatest Road Trips</button></a></p>
                 </div>
             </div>
@@ -65,15 +66,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780008430382.jpg" alt="nonfiction_2.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780008430382.jpg" alt="nonfiction_2.jpg">
                     <p class="bookname"><a href="feel_good_food.html"><button class="clickable">Feel Good Food: Over 100 Healthy Family Recipes</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_234656.jpg" alt="nonfiction_8.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_234656.jpg" alt="nonfiction_8.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Tasty As F*ck: Easy Recipes For When You'Re Really F*cking Hungry</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9784805316634.jpg" alt="nonfiction_9.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9784805316634.jpg" alt="nonfiction_9.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Cooking With Japanese Pickles: 97 Quick, Classic And Seasonal Recipes</button></a></p>
                 </div>
             </div>
