--- a/fiction.html
+++ b/fiction.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -27,15 +28,15 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23717.jpg" alt="fiction_3.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23717.jpg" alt="fiction_3.jpg">
                     <p class="bookname"><a href="sherlock_holmes_vol1.html"><button class="clickable">Sherlock Holmes Vol.1</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Sherlock Holmes Vol.2</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194556.jpg" alt="ficiton_5.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194556.jpg" alt="ficiton_5.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">The Curious Incident of the DOG in the NIGHT-TIME</button></a></p>
                 </div>
             </div>
@@ -50,11 +51,11 @@
                     <p class="bookname"><a href="the_fault_in_our_stars.html"><button class="clickable">The fault in our stars</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://salt.tikicdn.com/cache/750x750/ts/product/02/68/94/8ac980202b4d1fd0db204098e8bc68ae.jpg.webp" alt="fiction_8.jpeg">
+                    <img class="bookimages" src="https://salt.tikicdn.com/cache/750x750/ts/product/02/68/94/8ac980202b4d1fd0db204098e8bc68ae.jpg.webp" alt="fiction_8.jpg">
                     <p class="bookname"><a href="me_before_you.html"><button class="clickable">Me before you</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_25735.jpg" alt="ficiton_9.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_25735.jpg" alt="ficiton_9.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">The Notebook</button></a></p>
                 </div>
             </div>
@@ -65,15 +66,15 @@
             </div>
             <div class="subcategory_books">
                 <div >
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_24647.jpg" alt="fiction_1.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_24647.jpg" alt="fiction_1.jpg">
                     <p class="bookname"><a href="to_kill_a_mockingbird.html"><button class="clickable">To kill a mockingbird</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194575.jpg" alt="fiction_6.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194575.jpg" alt="fiction_6.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">Wuthering heights</button></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23470.jpg" alt="ficiton_7.jpeg">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23470.jpg" alt="ficiton_7.jpg">
                     <p class="bookname"><a href="#"><button class="non-clickable">The Phantom of the Opera</button></a></p>
                 </div>
             </div>
