--- a/journeys_of_a_lifetime.html
+++ b/journeys_of_a_lifetime.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h1><a href="index.html">Beta Online Bookstore</a></h1>
+        </div>
+        <nav id="topnav">
+            <ul>
+                <li class="top_nav"><a href="index.html">Home</a></li>
+                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <nav id="bottomnav">
+            <ul>
+                <li class="bottom_nav"><a href="#">About Us</a></li>
+                <li class="bottom_nav"><a href="#">Privacy Policy</a></li>
+                <li class="bottom_nav"><a href="#">Terms</a></li>
+                <li class="bottom_nav"><a href="#">Copyright</a></li>
+                <li class="bottom_nav"><a href="contactpage.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </footer> 
 </body>
 </html>
