--- a/fiction.html
+++ b/fiction.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1><a href="index.html">Beta Online Bookstore</a></h1>
-        </div>
         <nav id="topnav">
-            <ul>
-                <li class="top_nav"><a href="index.html">Home</a></li>
-                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-            </ul>
+            <div>
+                <h1><a href="index.html">Beta Online Bookstore</a></h1>
+            </div>
+            <div>
+                <ul>
+                    <li class="top_nav"><a href="index.html">Home</a></li>
+                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <section id="categories">
@@ -28,16 +30,16 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23717.jpg" alt="fiction_3.jpg">
-                    <p class="bookname"><a href="sherlock_holmes_vol1.html"><button class="clickable">Sherlock Holmes Vol.1</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="fiction_3.jpg">
+                    <p class="bookname"><a class="clickable" href="sherlock_holmes_vol1.html">Sherlock Holmes Vol.1</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22252.jpg" alt="fiction_4.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">Sherlock Holmes Vol.2</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories_volume_ii_1_2018_08_22_10_05_40.jpg" alt="fiction_4.jpg">
+                    <p class="bookname"><a class="non-clickable" href="#">Sherlock Holmes Vol.2</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194556.jpg" alt="ficiton_5.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">The Curious Incident of the DOG in the NIGHT-TIME</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_curious_incident_of_the_dog_in_the_night_time_1_2018_10_27_10_16_57.jpg" alt="ficiton_5.jpg">
+                    <p class="bookname"><a class="non-clickable" href="#">The Curious Incident of the DOG in the NIGHT-TIME</a></p>
                 </div>
             </div>
         </div>
@@ -47,16 +49,16 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780142424179.jpg" alt="fiction_2.jpg">
-                    <p class="bookname"><a href="the_fault_in_our_stars.html"><button class="clickable">The fault in our stars</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="the_fault_in_our_stars.html">The fault in our stars</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://salt.tikicdn.com/cache/750x750/ts/product/02/68/94/8ac980202b4d1fd0db204098e8bc68ae.jpg.webp" alt="fiction_8.jpg">
-                    <p class="bookname"><a href="me_before_you.html"><button class="clickable">Me before you</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="#">The Book Thief</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_25735.jpg" alt="ficiton_9.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">The Notebook</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/_/i_have_lost_my_way_1_2019_01_17_08_49_50.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">I Have Lost My Way</a></p>
                 </div>
             </div>
         </div>
@@ -66,16 +68,16 @@
             </div>
             <div class="subcategory_books">
                 <div >
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_24647.jpg" alt="fiction_1.jpg">
-                    <p class="bookname"><a href="to_kill_a_mockingbird.html"><button class="clickable">To kill a mockingbird</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/to_kill_a_mockingbird/2020_04_29_16_09_28_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To kill a mockingbird</a></a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_194575.jpg" alt="fiction_6.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">Wuthering heights</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_great_gatsby_1_2018_10_27_11_49_37.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">The Great Gasby</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23470.jpg" alt="ficiton_7.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">The Phantom of the Opera</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/les_miserables/2020_05_04_15_15_06_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">Les Miserables</a></p>
                 </div>
             </div>
         </div>
