--- a/non-fiction.html
+++ b/non-fiction.html
@@ -10,34 +10,36 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1><a href="index.html">Beta Online Bookstore</a></h1>
-        </div>
         <nav id="topnav">
-            <ul>
-                <li class="top_nav"><a href="index.html">Home</a></li>
-                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-            </ul>
+            <div>
+                <h1><a href="index.html">Beta Online Bookstore</a></h1>
+            </div>
+            <div>
+                <ul>
+                    <li class="top_nav"><a href="index.html">Home</a></li>
+                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <section id="categories">
         <div class="container">
             <div>
-                <h2>Psychology</h2>
+                <h2>Personal Development</h2>
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_23891.jpg" alt="nonfiction_1.jpg">
-                    <p class="bookname"><a href="how_to_win_friends_and_influence_people.html"><button class="clickable">How to Win Friends & Influence People</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_2355.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="how_to_win_friends_and_influence_people.html">How to Win Friends & Influence People</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_195509_1_22819.jpg" alt="nonfiction_3.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">How to Stop Worrying & Start Living</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/h/o/how_to_stop_worrying_start_living_1_2018_08_22_14_07_53.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">How to Stop Worrying & Start Living</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781847946249_1.jpg" alt="nonfiction_5.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">The Power Of Habit</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_power_of_habit_1_2018_11_03_10_20_23.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">The Power Of Habit</a></p>
                 </div>
             </div>
         </div>
@@ -47,16 +49,16 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426219733.jpg" alt="nonfiction_4.jpg">
-                    <p class="bookname"><a href="journeys_of_a_lifetime.html"><button class="clickable">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/journeys_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_trips/2022_06_01_13_58_54_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="journeys_of_a_lifetime.html">Journeys Of A Lifetime 2nd Edition: 500 Of The World's Greatest Trips</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426220968.jpg" alt="nonfiction_6.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">National Geographic Complete National Parks Of Europe</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/national_geographic_complete_national_parks_of_europe_460_parks__including_flora_and_fauna__historic_sites__scenic_hiking_trails__and_more/2022_06_01_13_59_01_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">National Geographic Complete National Parks Of Europe</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9781426221392.jpg" alt="nonfiction_7.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">Drives Of A Lifetime 2nd Edition: 500 Of The World's Greatest Road Trips</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/d/r/drives_of_a_lifetime_2nd_edition_500_of_the_worlds_greatest_road_trips_1_2022_06_01_13_59_08.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">Drives Of A Lifetime 2nd Edition: 500 Of The World's Greatest Road Trips</a></p>
                 </div>
             </div>
         </div>
@@ -66,16 +68,16 @@
             </div>
             <div class="subcategory_books">
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9780008430382.jpg" alt="nonfiction_2.jpg">
-                    <p class="bookname"><a href="feel_good_food.html"><button class="clickable">Feel Good Food: Over 100 Healthy Family Recipes</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/feel_good_food_over_100_healthy_family_recipes/2022_08_23_10_31_48_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="clickable" href="feel_good_food.html">Feel Good Food: Over 100 Healthy Family Recipes</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_234656.jpg" alt="nonfiction_8.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">Tasty As F*ck: Easy Recipes For When You'Re Really F*cking Hungry</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/tasty_as_fck_easy_recipes_for_when_youre_really_fcking_hungry/2021_08_02_13_58_16_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">Tasty As F*ck: Easy Recipes For When You'Re Really F*cking Hungry</a></p>
                 </div>
                 <div>
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/9/7/9784805316634.jpg" alt="nonfiction_9.jpg">
-                    <p class="bookname"><a href="#"><button class="non-clickable">Cooking With Japanese Pickles: 97 Quick, Classic And Seasonal Recipes</button></a></p>
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/cooking_with_japanese_pickles_97_quick__classic_and_seasonal_recipes/2022_08_09_14_11_40_1-390x510.jpg" alt="">
+                    <p class="bookname"><a class="non-clickable" href="#">Cooking With Japanese Pickles: 97 Quick, Classic And Seasonal Recipes</a></p>
                 </div>
             </div>
         </div>
