--- a/the_fault_in_our_stars.html
+++ b/the_fault_in_our_stars.html
@@ -10,18 +10,22 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1><a href="index.html">Beta Online Bookstore</a></h1>
-        </div>
         <nav id="topnav">
-            <ul>
-                <li class="top_nav"><a href="index.html">Home</a></li>
-                <li class="top_nav"><a href="fiction.html">Fiction</a></li>
-                <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
-            </ul>
+            <div>
+                <h1><a href="index.html">Beta Online Bookstore</a></h1>
+            </div>
+            <div>
+                <ul>
+                    <li class="top_nav"><a href="index.html">Home</a></li>
+                    <li class="top_nav"><a href="fiction.html">Fiction</a></li>
+                    <li class="top_nav"><a href="non-fiction.html">Non-Fiction</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
+    <section>
 
+    </section>
     <footer>
         <nav id="bottomnav">
             <ul>
