--- a/fiction.html
+++ b/fiction.html
@@ -26,16 +26,16 @@
     <section id="categories">
         <div class="container">
             <div>
-                <h2>Detective novels</h2>
+                <h2><a>Detective Novels</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="fiction_3.jpg">
-                    <p class="bookname"><a class="clickable" href="sherlock_holmes_vol1.html">Sherlock Holmes Vol.1</a></p>
+                    <p class="bookname"><a class="clickable" href="sherlock_holmes_vol1.html">Sherlock Holmes Volume 1</a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories_volume_ii_1_2018_08_22_10_05_40.jpg" alt="fiction_4.jpg">
-                    <p class="bookname"><a class="non-clickable" href="#">Sherlock Holmes Vol.2</a></p>
+                    <p class="bookname"><a class="non-clickable" href="#">Sherlock Holmes Volume 2</a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/h/the_curious_incident_of_the_dog_in_the_night_time_1_2018_10_27_10_16_57.jpg" alt="ficiton_5.jpg">
@@ -45,7 +45,7 @@
         </div>
         <div class="container">
             <div>
-                <h2>Romance</h2>
+                <h2><a>Romance</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
@@ -54,7 +54,7 @@
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/m/image_179418.jpg" alt="">
-                    <p class="bookname"><a class="clickable" href="#">The Book Thief</a></p>
+                    <p class="bookname"><a class="non-clickable" href="#">The Book Thief</a></p>
                 </div>
                 <div>
                     <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/i/_/i_have_lost_my_way_1_2019_01_17_08_49_50.jpg" alt="">
@@ -64,7 +64,7 @@
         </div>
         <div class="container">
             <div>
-                <h2>Classics</h2>
+                <h2><a>Classics</a></h2>
             </div>
             <div class="subcategory_books">
                 <div >
