--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="assets">
+    <link rel="icon" href="Pictures">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -40,7 +40,7 @@
                 </div>
                 <div>
                     <img class="homepage_bookimages" src="https://cdn0.fahasa.com/media/catalog/product/s/h/sherlock_holmes_the_complete_novels_and_stories__vol_1_1_2018_08_22_10_06_11.jpg" alt="">
-                    <p class="bookname"><a href="sherlock_holmes_vol1.html">Sherlock Holmes Vol.1</a></p>
+                    <p class="bookname"><a href="sherlock_holmes_vol1.html">Sherlock Holmes Volume 1</a></p>
                 </div>
             </div>
         </div>
