--- a/non-fiction.html
+++ b/non-fiction.html
@@ -26,7 +26,7 @@
     <section id="categories">
         <div class="container">
             <div>
-                <h2>Personal Development</h2>
+                <h2><a>Personal Development</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
@@ -45,7 +45,7 @@
         </div>
         <div class="container">
             <div>
-                <h2>Travel</h2>
+                <h2><a>Travel</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
@@ -64,7 +64,7 @@
         </div>
         <div class="container">
             <div>
-                <h2>Food & Drink</h2>
+                <h2><a>Food & Drink</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
