--- a/the_fault_in_our_stars.html
+++ b/the_fault_in_our_stars.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Document</title>
+    <title>The Fault In Our Stars</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,51 @@
         </nav>
     </header>
     <section>
-        
+        <nav>
+            <ul class="breadcrumb">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="fiction.html">Fiction</a></li>
+                <li><a href="#">Romance</a></li>
+                <li><a href="the_fault_in_our_stars.html">The Fault In Our Stars</a></li>
+            </ul>
+        </nav>
+        <div id="book_detail_images">
+            <div>
+                <div id="main_image">
+                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                </div>
+                <div id="book_detail_subimages">
+                    <div>
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div id="book_price">
+                <div>
+                    <h2><a>Book price</a></h2>
+                    <p>100000 VND</p>
+                </div>
+                <div>
+                    <button>Add to cart</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div id="book_description">
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </div>
     </section>
     <footer>
         <nav id="bottomnav">
