commit 6th time

--- a/fiction.html
+++ b/fiction.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aladin&display=swap" rel="stylesheet">
     <title>Beta Online Bookstore</title>
 </head>
 <body>
@@ -68,7 +69,7 @@
             </div>
             <div class="subcategory_books">
                 <div >
-                    <img class="bookimages" src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/to_kill_a_mockingbird/2020_04_29_16_09_28_1-390x510.jpg" alt="">
+                    <img class="bookimages" src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
                     <p class="bookname"><a class="clickable" href="to_kill_a_mockingbird.html">To kill a mockingbird</a></a></p>
                 </div>
                 <div>
