--- a/to_kill_a_mockingbird.html
+++ b/to_kill_a_mockingbird.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Document</title>
+    <title>To Kill A Mockingbird</title>
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section id="book_details">
         <nav>
             <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
@@ -34,28 +34,28 @@
         </nav>
         <div id="book_detail_images">
             <div>
-                <div>
-                    <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
+                <div id="main_image">
+                    <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_1_2018_11_02_11_41_49.jpg" alt="">
                 </div>
                 <div id="book_detail_subimages">
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_2-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_2_2018_11_02_11_41_49.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_4-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_4_2018_11_02_11_41_49.png" alt="">
                     </div>
                     <div>
-                        <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_8-390x510.jpg" alt="">
+                        <img src="https://cdn0.fahasa.com/media/catalog/product/t/o/to_kill_a_mockingbird_10_2018_11_02_11_41_49.png" alt="">
                     </div>
                 </div>
             </div>
             <div id="book_price">
                 <div>
-                    <h2><a>Book price</a></h2>
-                    <p>100000 VND</p>
+                    <h2><a>Book Price</a></h2>
+                    <p><strong>126.000 VND</strong></p>
                 </div>
                 <div>
-                    <button>Add to cart</button>
+                    <button class="clickable">Add to cart</button>
                 </div>
             </div>
         </div>
@@ -63,10 +63,17 @@
     <section>
         <div id="book_description">
             <div>
-
+                <h1><a>To Kill A Mockingbird by Harper Lee</a></h1>
             </div>
             <div>
-
+                <p>
+                    To Kill a Mockingbird is a novel by Harper Lee. Although it was written in 1960 it is set in the mid-1930s in the small town of Maycomb, Alabama. 
+                    It is narrated by Scout Finch, a six-year-old tomboy who lives with her lawyer father Atticus and her ten-year-old brother Jem. During the novel Scout, Jem 
+                    and their friend Dill try to make their reclusive neighbour Boo Radley leave his house. Boo has not been seen in Maycomb since he was a teenager.
+                    <br><br>Many residents of Maycomb are racists and during the novel Atticus is asked to defend Tom Robinson, a black man wrongly accused of raping a white woman. 
+                    Atticus takes on the case even though everyone knows he has little hope of winning. The reader sees the trial develop through the childlike eyes of Scout, 
+                    as gradually both she and her brother learn some valuable life lessons from their father about tolerance, empathy and understanding.
+                </p>
             </div>
         </div>
     </section>
