--- a/fiction.html
+++ b/fiction.html
@@ -27,7 +27,7 @@
     <section id="categories">
         <div class="container">
             <div>
-                <h2><a>Detective Novels</a></h2>
+                <h2><a>Crime</a></h2>
             </div>
             <div class="subcategory_books">
                 <div>
