--- a/sherlock_holmes_vol1.html
+++ b/sherlock_holmes_vol1.html
@@ -23,18 +23,18 @@
             </div>
         </nav>
     </header>
-    <section>
+    <section id="book_details">
         <nav>
             <ul class="breadcrumb">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="fiction.html">Fiction</a></li>
-                <li><a href="#">Detective Novels</a></li>
+                <li><a href="#">Crime</a></li>
                 <li><a href="sherlock_holmes_vol1.html">Sherlock Holmes Volume 1</a></li>
             </ul>
         </nav>
         <div id="book_detail_images">
             <div>
-                <div>
+                <div id="main_image">
                     <img src="https://cdn0.fahasa.com/media/flashmagazine/images/page_images/the_fault_in_our_stars/2023_03_30_10_46_28_1-390x510.jpg" alt="">
                 </div>
                 <div id="book_detail_subimages">
